@@ -24,5 +24,5 @@ Proposals by number:
 103  Splitting identity key from regularly used signing key [OPEN]
 104  Long and Short Router Descriptors [OPEN]
 105  Version negotiation for the Tor protocol [OPEN]
-106  Checking fewer things during TLS handshakes [OPEN]
+106  Checking fewer things during TLS handshakes [FINISHED]
 
